force-app/main/default/objects/Vehicle__c/Vehicle__c.object-meta.xml
<CustomObject>
    <description>Track Vehicle information</description>
    <label>Vehicle</label>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>