force-app/main/default/objects/Vehicle__c/fields/Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Date__c</fullName>
    <description>Date Vehicle was acquired</description>
    <label>Acquisition Date</label>
    <type>Date</type>
</CustomField>