force-app/main/default/objects/Vehicle__c/fields/Acquisition_Type__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Type__c</fullName>
    <description>How was the vehicle acquired</description>
    <label>Acquisition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan</fullName>
                <default>true</default>
                <label>Loan</label>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>