force-app/main/default/objects/Vehicle__c/fields/APR__c.field-meta.xml
<CustomField>
    <fullName>APR__c</fullName>
    <description>APR of Loan or Lease</description>
    <label>APR</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>