force-app/main/default/objects/Vehicle__c/fields/Drivetrain__c.field-meta.xml
<CustomField>
    <fullName>Drivetrain__c</fullName>
    <description>Drivetrain</description>
    <label>Drivetrain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4WD</fullName>
            </value>
            <value>
                <fullName>AWD</fullName>
            </value>
            <value>
                <fullName>FWD</fullName>
            </value>
            <value>
                <fullName>RWD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>