force-app/main/default/objects/Vehicle__c/fields/Exterior_Color__c.field-meta.xml
<CustomField>
    <fullName>Exterior_Color__c</fullName>
    <description>Vehicle Color</description>
    <label>Exterior Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>