force-app/main/default/objects/Vehicle__c/fields/Interior_Color__c.field-meta.xml
<CustomField>
    <fullName>Interior_Color__c</fullName>
    <description>interior color for the vehicle</description>
    <label>Interior Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>