force-app/main/default/objects/Vehicle__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>Manufacturer of the Vehicle</description>
    <label>Make</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>