force-app/main/default/objects/Vehicle__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <description>Options selected</description>
    <inlineHelpText>Individual Options</inlineHelpText>
    <label>Options</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>