force-app/main/default/objects/Vehicle__c/fields/Packages__c.field-meta.xml
<CustomField>
    <fullName>Packages__c</fullName>
    <description>Packages specified</description>
    <label>Packages</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>