force-app/main/default/objects/Vehicle__c/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <description>Price of acquiring the vehicle</description>
    <label>Purchase Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>