force-app/main/default/objects/Vehicle__c/fields/Specifications__c.field-meta.xml
<CustomField>
    <fullName>Specifications__c</fullName>
    <description>Specifications of the vehicle</description>
    <inlineHelpText>List standard features, hp/tq, etc..</inlineHelpText>
    <label>Specifications</label>
    <length>120000</length>
    <type>Html</type>
</CustomField>