force-app/main/default/objects/Vehicle__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Acquisition Term for Loan or Lease</description>
    <inlineHelpText>Length of Loan or Lease</inlineHelpText>
    <label>Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>