force-app/main/default/objects/Vehicle__c/fields/Term_End__c.field-meta.xml
<CustomField>
    <fullName>Term_End__c</fullName>
    <description>End of Lease or Loan Term</description>
    <formula>ADDMONTHS( Acquisition_Date__c , Term__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the date the Loan or Lease ends</inlineHelpText>
    <label>Term End</label>
    <type>Date</type>
</CustomField>