force-app/main/default/objects/Vehicle__c/fields/Transmission__c.field-meta.xml
<CustomField>
    <fullName>Transmission__c</fullName>
    <description>Transmission of Vehicle</description>
    <label>Transmission</label>
    <length>120</length>
    <type>Text</type>
</CustomField>