force-app/main/default/objects/Vehicle__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Vehicle Year</description>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>